--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,7 @@
 name: CI
 on:
   pull_request:
-    branches: [dev, main]
-  push:
-    branches: [dev, main]
+    branches: [main]
 
 jobs:
   build:
@@ -23,13 +21,9 @@ jobs:
       - name: Use NodeJS
         uses: actions/setup-node@v1
         with:
-          node-version: "12.x"
+          node-version: "14.x"
       - run: npm ci
-      - run: npm run lint
-      - run: npm test -- --coverage
+      - run: npm run ghtest
         env:
           CI: true
 
-      - name: Build Project Application
-        if: github.event_name == 'push'
-        run: npm run build
