--- a/client/package.json
+++ b/client/package.json
@@ -7,16 +7,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint:next": "next lint",
+    "ghtest": "echo 'Github Workflow Test is successful!'",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test start http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless",
+    "lint": "eslint '**/*.js*'",
+    "prettier:check": "prettier --check '**/*.{js,jsx,json}'",
+    "prettier:write": "prettier --write '**/*.{js,jsx,json}'"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "keywords": [],
   "author": "Adam Dubey",
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@react-hook/window-size": "^3.0.7",
     "antd": "^4.22.4",
     "next": "^12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "cypress": "^10.4.0",
+    "eslint": "^8.21.0",
+    "eslint-config-next": "12.2.4",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-react": "^7.30.1",
+    "prettier": "^2.7.1"
   }
 }
