--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "NODE_ENV=test jest --forceExit"
   },
   "keywords": [],
   "author": "Adam Dubey",
@@ -24,5 +25,9 @@
     "navigator": "^1.0.1",
     "nodemon": "^2.0.15",
     "shortid": "^2.2.16"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4"
   }
 }
