--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,15 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+  
+  mongo:
+    image: mongo
+    container_name: "mongo"
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    volumes:
+      - './dockervolume/mongodb:/data/db'
+    ports:
+      - 27017:27017
