--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,6 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
-      - './dockervolume/mongodb:/data/db'
+      - './db-data/mongodb:/data/db'
     ports:
       - 27017:27017
