[AD] Refactor client-app

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -3,7 +3,7 @@
     "browser": true,
     "es6": true
   },
-  "extends": ["plugin:react/recommended", "standard"],
+  "extends": ["eslint:recommended", "next", "prettier"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
