--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint:next": "next lint",
+    "lint": "next lint",
     "ghtest": "echo 'Github Workflow Test is successful!'",
     "cypress": "cypress open",
     "cypress:headless": "cypress run",
     "e2e": "start-server-and-test start http://localhost:3000 cypress",
     "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless",
-    "lint": "eslint '**/*.js*'",
     "prettier:check": "prettier --check '**/*.{js,jsx,json}'",
     "prettier:write": "prettier --write '**/*.{js,jsx,json}'"
   },
@@ -32,9 +31,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.2.5",
     "cypress": "^10.4.0",
     "eslint": "^8.21.0",
     "eslint-config-next": "12.2.4",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-react": "^7.30.1",
     "prettier": "^2.7.1"
