--- a/client/package.json
+++ b/client/package.json
@@ -26,9 +26,11 @@
     "@ant-design/icons": "^4.7.0",
     "@react-hook/window-size": "^3.0.7",
     "antd": "^4.22.4",
+    "axios": "^0.27.2",
     "next": "^12.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.2.5",
