[AD] Refactor pipeline workflows for test runs for client and server apps

--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -6,11 +6,11 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  build-server:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./client
+        working-directory: ./server
 
     steps:
       - uses: actions/checkout@v2
