--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "NODE_ENV=test jest --forceExit"
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "test": "NODE_ENV=test jest --forceExit",
+    "ghtest": "echo 'Github Workflow Test is successful!'"
   },
   "keywords": [],
   "author": "Adam Dubey",
