--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,8 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-react": "^7.30.1",
     "prettier": "^2.7.1"
+  },
+  "overrides": {
+    "prosemirror-tables": "^1.1.1"
   }
 }
