--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "next": "^12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.3.0"
+    "react-hot-toast": "^2.3.0",
+    "react-image-file-resizer": "^0.4.8"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.2.5",
