--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.31.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
@@ -30,6 +31,7 @@
     "slugify": "^1.6.5"
   },
   "devDependencies": {
+    "eslint": "^8.23.0",
     "jest": "^28.1.3",
     "supertest": "^6.2.4"
   }
