--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "nodemon -r esm index.js",
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "test": "NODE_ENV=test jest --forceExit",
     "ghtest": "echo 'Github Workflow Test is successful!'"
   },
@@ -18,6 +22,7 @@
     "cloudinary": "^1.29.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
@@ -28,6 +33,7 @@
     "nanoid": "^2.1.11",
     "navigator": "^1.0.1",
     "nodemon": "^2.0.15",
+    "prettier": "^2.7.1",
     "shortid": "^2.2.16",
     "slugify": "^1.6.5"
   },
