--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@react-hook/window-size": "^3.0.7",
     "antd": "^4.22.4",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
     "next": "^12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
