--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "antd": "^4.22.4",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
+    "generate-password": "^1.7.0",
     "next": "^12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
