--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "cloudinary": "^1.29.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "eslint-config-prettier": "^8.5.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
