--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
-    "react-image-file-resizer": "^0.4.8"
+    "react-image-file-resizer": "^0.4.8",
+    "react-share-social": "^0.1.48"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.2.5",
